--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/target
-Cargo.lock
+/target/
+Cargo.toml
+/public/*.wasm
+/public/*.ts
 /public/wordle.js
-*.wasm
-*.ts
 /public/package.json
 /public/README.md
